// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pre-commit calls lint-staged CLI with default args 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js,
  npm run validate,
]
`;

exports[`pre-commit disables DocToc and forwards args 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json --verbose --some-other-arg,
  npm run validate,
]
`;

exports[`pre-commit disables DocToc and forwards args 2`] = `
Array [
  .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  {"*.+(js|jsx|json|json5|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx|vue)":["./src/index.js format"],"*.+(js|jsx|ts|tsx)":["./src/index.js lint"],"*.+(tsx|ts|jsx|js)":["./src/index.js test --findRelatedTests"]},
]
`;

exports[`pre-commit disables DocToc, overrides built-in test command, and forwards args 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json --verbose --some-other-arg,
  npm run validate,
]
`;

exports[`pre-commit disables DocToc, overrides built-in test command, and forwards args 2`] = `
Array [
  .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  {"*.+(js|jsx|json|json5|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx|vue)":["./src/index.js format"],"*.+(js|jsx|ts|tsx)":["./src/index.js lint"],"*.+(tsx|ts|jsx|js)":["yarn test:custom --findRelatedTests foo.js"]},
]
`;

exports[`pre-commit does not run validate script if it's not defined 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js,
]
`;

exports[`pre-commit does not use built-in config with .lintstagedrc file 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with --config 1`] = `
Array [
  lint-staged --config ./custom-config.js,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with lint-staged pkg prop 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit does not use built-in config with lint-staged.config.js file 1`] = `
Array [
  lint-staged ,
  npm run validate,
]
`;

exports[`pre-commit forwards args 1`] = `
Array [
  lint-staged --config ./src/config/lintstagedrc.js --verbose,
  npm run validate,
]
`;

exports[`pre-commit overrides built-in test command with --test-command 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  npm run validate,
]
`;

exports[`pre-commit overrides built-in test command with --test-command 2`] = `
Array [
  .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  {"README.md":["doctoc --maxlevel 4 --notitle"],"*.+(js|jsx|json|json5|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx|vue)":["./src/index.js format"],"*.+(js|jsx|ts|tsx)":["./src/index.js lint"],"*.+(tsx|ts|jsx|js)":["yarn test:custom --findRelatedTests foo.js"]},
]
`;

exports[`pre-commit overrides built-in test command with --test-command and forwards args 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json --verbose,
  npm run validate,
]
`;

exports[`pre-commit overrides built-in test command with --test-command and forwards args 2`] = `
Array [
  .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  {"README.md":["doctoc --maxlevel 4 --notitle"],"*.+(js|jsx|json|json5|yml|yaml|css|less|scss|ts|tsx|md|graphql|mdx|vue)":["./src/index.js format"],"*.+(js|jsx|ts|tsx)":["./src/index.js lint"],"*.+(tsx|ts|jsx|js)":["yarn test:custom --findRelatedTests foo.js"]},
]
`;

exports[`pre-commit overrides built-in test command with --testCommand 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json,
  npm run validate,
]
`;

exports[`pre-commit overrides built-in test command with --testCommand and forwards args 1`] = `
Array [
  lint-staged --config .test-tmp/hover-javascriptTMPSUFFIX/.lintstaged.json --verbose,
  npm run validate,
]
`;

exports[`pre-commit throws an error when \`--config\` and \`--testCommand\` are used together 1`] = `[Error: @hover/javascript/pre-commit: --config and --testCommand cannot be used together (--testCommand only works with built-in lint-staged configuration)]`;

exports[`pre-commit throws an error when invalid \`--testCommand\` is provided 1`] = `[Error: @hover/javascript/pre-commit: invalid --testCommand]`;
